@@ -2287,7 +2287,7 @@ DROP TABLE IF EXISTS `profilesUsers`;
 CREATE TABLE `profilesUsers` (
   `id_pru` int(11) unsigned NOT NULL auto_increment,
   `login_pru` varchar(50) NOT NULL default '',
-  `password_pru` varchar(32) NOT NULL default '',
+  `password_pru` varchar(45) NOT NULL default '',
   `firstName_pru` varchar(50) NOT NULL default '',
   `lastName_pru` varchar(50) NOT NULL default '',
   `contactData_pru` int(11) unsigned NOT NULL default '0',
@@ -2307,8 +2307,8 @@ CREATE TABLE `profilesUsers` (
 -- Contenu de la table `profilesUsers`
 --
 
-INSERT INTO `profilesUsers` (`id_pru`, `login_pru`, `password_pru`, `firstName_pru`, `lastName_pru`, `contactData_pru`, `profile_pru`, `language_pru`, `dn_pru`, `active_pru`, `deleted_pru`, `alerts_pru`, `favorites_pru`) VALUES(1, 'root', '3b0d99b9bb927794036aa828050f364d', '', 'Super Administrator', 1, 1, 'en', '', 1, 0, 'standard,7;pnews,1;pmedia,1', '');
-INSERT INTO `profilesUsers` (`id_pru`, `login_pru`, `password_pru`, `firstName_pru`, `lastName_pru`, `contactData_pru`, `profile_pru`, `language_pru`, `dn_pru`, `active_pru`, `deleted_pru`, `alerts_pru`, `favorites_pru`) VALUES(3, 'anonymous', '294de3557d9d00b3d2d8a1e6aab028cf', '', 'Anonymous User', 3, 3, 'en', '', 1, 0, '', '');
+INSERT INTO `profilesUsers` (`id_pru`, `login_pru`, `password_pru`, `firstName_pru`, `lastName_pru`, `contactData_pru`, `profile_pru`, `language_pru`, `dn_pru`, `active_pru`, `deleted_pru`, `alerts_pru`, `favorites_pru`) VALUES(1, 'root', '{sha}38f5e2ad12977a6100562dd369aba61aee589454', '', 'Super Administrator', 1, 1, 'en', '', 1, 0, 'standard,7;pnews,1;pmedia,1', '');
+INSERT INTO `profilesUsers` (`id_pru`, `login_pru`, `password_pru`, `firstName_pru`, `lastName_pru`, `contactData_pru`, `profile_pru`, `language_pru`, `dn_pru`, `active_pru`, `deleted_pru`, `alerts_pru`, `favorites_pru`) VALUES(3, 'anonymous', '{sha}0a92fab3230134cca6eadd9898325b9b2ae67998', '', 'Anonymous User', 3, 3, 'en', '', 1, 0, '', '');
 
 -- --------------------------------------------------------
 
