@@ -1,0 +1,1 @@
+ALTER TABLE  `profilesUsers` CHANGE  `password_pru`  `password_pru` VARCHAR( 45 ) NOT NULL DEFAULT  '';
