@@ -5,6 +5,7 @@ V4.1.2 (in progress)
 [REFACTOR] : Update phpMyAdmin to version 3.3.10
 [REFACTOR] : Add links to access users / groups properties from all users/groups management listing
 [REFACTOR] : Move VERSION and CHANGELOG files into /automne folder
+[REFACTOR] : Automne passwords are now stored with sha1 hashing method (more secure)
 [FEATURE] : Add logs for all actions done on polymod objects which are not subject to validation
 [FEATURE] : Add direct access to rows and templates help links in side panel
 [FEATURE] : Add website specific 403 and 404 pages
